--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -1,4 +1,4 @@
-#
+# 
 # Copyright (c) 2013 Les Hazlewood and contributors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -31,12 +31,12 @@ securityManager.cacheManager = $cacheManager
 # takes 5 minutes to set up:
 stormpathClient = com.stormpath.shiro.client.ClientFactory
 stormpathClient.cacheManager = $cacheManager
-stormpathClient.apiKeyFileLocation = $HOME/.stormpath/apiKey.properties
+stormpathClient.apiKeyFileLocation = /home/scarty/.stormpath/apiKey.properties
 stormpathRealm = com.stormpath.shiro.realm.ApplicationRealm
 stormpathRealm.client = $stormpathClient
 # Find this URL in your Stormpath console for an application you create:
 # Applications -> (choose application name) --> Details --> REST URL
-stormpathRealm.applicationRestUrl = https://api.stormpath.com/v1/applications/$STORMPATH_APPLICATION_ID
+stormpathRealm.applicationRestUrl = https://api.stormpath.com/v1/applications/4CGhqpHBznqgYgHHjVNgdi
 stormpathRealm.groupRoleResolver.modeNames = name
 securityManager.realm = $stormpathRealm
 
