--- a/src/main/webapp/WEB-INF/shiro.ini
+++ b/src/main/webapp/WEB-INF/shiro.ini
@@ -1,4 +1,4 @@
-#
+# 
 # Copyright (c) 2013 Les Hazlewood and contributors
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
@@ -18,9 +18,12 @@
 # Please http://shiro.apache.org/configuration.html and
 # http://shiro.apache.org/web.html for more.
 
+
 [main]
 
 shiro.loginUrl = /login.jsp
+authc.successUrl = /home.jsp
+
 
 # Let's use some in-memory caching to reduce the number of runtime lookups against Stormpath.  A real
 # application might want to use a more robust caching solution (e.g. ehcache or a distributed cache).  When using such
@@ -31,19 +34,20 @@ securityManager.cacheManager = $cacheManager
 
 # Configure a Realm to connect to a user datastore.  In this simple tutorial, we'll just point to Stormpath since it
 # takes 5 minutes to set up:
+
 stormpathClient = com.stormpath.shiro.client.ClientFactory
 stormpathClient.cacheManager = $cacheManager
-stormpathClient.apiKeyFileLocation = $HOME/.stormpath/apiKey.properties
+stormpathClient.apiKeyFileLocation = /home/scarty/.stormpath/apiKey.properties
+
 stormpathRealm = com.stormpath.shiro.realm.ApplicationRealm
 stormpathRealm.client = $stormpathClient
-# Find this URL in your Stormpath console for an application you create:
-# Applications -> (choose application name) --> Details --> REST URL
-stormpathRealm.applicationRestUrl = https://api.stormpath.com/v1/applications/$STORMPATH_APPLICATION_ID
+stormpathRealm.applicationRestUrl = https://api.stormpath.com/v1/applications/8dEYm1X1DlAGDvxif4ZQq
+stormpathRealm.authenticationCachingEnabled = true
 stormpathRealm.groupRoleResolver.modeNames = name
 securityManager.realm = $stormpathRealm
+
+# Stuff we've configured here previously is omitted for brevity
 
 [urls]
 /login.jsp = authc
 /logout = logout
-
-
